samples/_failures_safe/1761402347_facdc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a04b69e1.c: In function ‘main’:
./samples/SAFE/__tmp_a04b69e1.c:160:17: error: expected declaration or statement at end of input
  160 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_a04b69e1.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a04b69e1.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a04b69e1.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a04b69e1.c:160:17: error: expected declaration or statement at end of input
